--- a/Node/NPM Modules/package.json
+++ b/Node/NPM Modules/package.json
@@ -7,5 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Sodiq Sanusi",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "superheroes": "^3.0.0"
+  }
 }
