--- a/Secrets (Auth Heavy)/package.json
+++ b/Secrets (Auth Heavy)/package.json
@@ -10,6 +10,7 @@
   "author": "Sodiq Sanusi",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "mongoose": "^7.0.3",
