--- a/Secrets (Auth Heavy)/package.json
+++ b/Secrets (Auth Heavy)/package.json
@@ -10,9 +10,11 @@
   "author": "Sodiq Sanusi",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "md5": "^2.3.0",
     "mongoose": "^7.0.3",
     "mongoose-encryption": "^2.1.2"
   }
